--- a/index.html
+++ b/index.html
@@ -1923,6 +1923,118 @@
                 })
                 .catch(() => showAlert("Failed to copy link. Please try again."));
         }
+
+        // --- AJOUT : Gestionnaire pour la recherche vidéo YouTube ---
+        window.handleYTVideoKeyPress = function(event) {
+            if (event.key === "Enter") {
+                window.fetchYTVideoData();
+            }
+        };
+
+        window.fetchYTVideoData = async function() {
+            const videoTitle = document.getElementById("ytvideo-input").value.trim();
+            if (!videoTitle) {
+                showAlert("Please enter a video title");
+                return;
+            }
+            const loader = document.getElementById("ytvideo-loader");
+            const resultsContainer = document.getElementById("ytvideo-results-container");
+            const resultsGrid = document.getElementById("ytvideo-results-grid");
+            loader.style.display = "block";
+            resultsContainer.style.display = "none";
+            resultsGrid.innerHTML = "";
+            try {
+                const response = await fetch(`https://mixerno.space/api/youtube-video-counter/search/${encodeURIComponent(videoTitle)}`);
+                const data = await response.json();
+                loader.style.display = "none";
+                if (!data.list || data.list.length === 0) {
+                    showAlert("No videos found. Please try a different title.");
+                    return;
+                }
+                displayYTVideoResults(data.list);
+                resultsContainer.style.display = "block";
+                resultsContainer.scrollIntoView({ behavior: 'smooth', block: 'start' });
+            } catch (error) {
+                loader.style.display = "none";
+                showAlert("An error occurred. Please try again later.");
+            }
+        };
+
+        function displayYTVideoResults(videos) {
+            const resultsGrid = document.getElementById("ytvideo-results-grid");
+            resultsGrid.innerHTML = "";
+            videos.forEach(video => {
+                // video = [title, videoId, channelTitle, thumbnail]
+                const card = document.createElement('div');
+                card.className = 'channel-card';
+                card.innerHTML = `
+                    <img src="${video[3] || 'https://via.placeholder.com/60'}" alt="${video[0]}" class="channel-avatar">
+                    <div class="channel-info">
+                        <div class="channel-name">${video[0]}</div>
+                        <div class="channel-id">${video[2]}</div>
+                    </div>
+                `;
+                card.addEventListener('click', () => {
+                    showYTVideoCounter(video);
+                });
+                resultsGrid.appendChild(card);
+            });
+        }
+
+        function showYTVideoCounter(video) {
+            // video = [title, videoId, channelTitle, thumbnail]
+            ytvideoId = video[1];
+            document.getElementById("ytvideo-thumbnail").src = video[3] || 'https://via.placeholder.com/120';
+            document.getElementById("ytvideo-title").textContent = video[0];
+            document.getElementById("ytvideo-counter-container").style.display = "block";
+            document.getElementById("ytvideo-results-container").style.display = "none";
+            document.querySelectorAll("#main-container .search-card")[1].style.display = "none";
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+            clearInterval(ytvideoIntervalId);
+            fetchYTVideoStats();
+            ytvideoIntervalId = setInterval(fetchYTVideoStats, 2000);
+        }
+
+        function fetchYTVideoStats() {
+            if (!ytvideoId) return;
+            fetch(`https://mixerno.space/api/youtube-video-counter/video/${ytvideoId}`)
+                .then(res => res.json())
+                .then(data => {
+                    if (!data || !data.statistics) return;
+                    const stats = data.statistics;
+                    if (!ytvideoOdometerViews) {
+                        ytvideoOdometerViews = new Odometer({
+                            el: document.getElementById("ytvideo-views"),
+                            value: stats.viewCount || 0,
+                            format: '(,ddd)',
+                            theme: 'minimal'
+                        });
+                    } else {
+                        ytvideoOdometerViews.update(stats.viewCount || 0);
+                    }
+                    if (!ytvideoOdometerLikes) {
+                        ytvideoOdometerLikes = new Odometer({
+                            el: document.getElementById("ytvideo-likes"),
+                            value: stats.likeCount || 0,
+                            format: '(,ddd)',
+                            theme: 'minimal'
+                        });
+                    } else {
+                        ytvideoOdometerLikes.update(stats.likeCount || 0);
+                    }
+                    if (!ytvideoOdometerComments) {
+                        ytvideoOdometerComments = new Odometer({
+                            el: document.getElementById("ytvideo-comments"),
+                            value: stats.commentCount || 0,
+                            format: '(,ddd)',
+                            theme: 'minimal'
+                        });
+                    } else {
+                        ytvideoOdometerComments.update(stats.commentCount || 0);
+                    }
+                })
+                .catch(() => {});
+        }
     </script>
 </body>
 </html>
