--- a/index.html
+++ b/index.html
@@ -1314,33 +1314,35 @@
 
         function handleRoute() {
             let path = window.location.pathname;
-            if (path.replace(/\/+$/, '') === '/youtube') {
+            // Ajout : /youtube/subs route
+            if (path.replace(/\/+$/, '') === '/youtube' || path.replace(/\/+$/, '') === '/youtube/subs') {
                 showYoutube();
-                init();
-            }
-            else if (/\/youtube\/[^\/]+$/.test(path)) {
-                showYoutube();
-                const channelIdFromUrl = getChannelIdFromPath();
-                if (channelIdFromUrl) {
-                    channelId = channelIdFromUrl;
-                    showCounter();
-                    fetchStatsData();
-                    clearInterval(intervalId);
-                    intervalId = setInterval(fetchStatsData, 2000);
-                }
+                // Affiche la recherche de chaînes
+                document.querySelectorAll("#main-container .search-card")[0].style.display = "block";
+                document.querySelectorAll("#main-container .search-card")[1].style.display = "block";
+                document.getElementById("results-container").style.display = "none";
+                document.getElementById("counter-container").style.display = "none";
+                document.getElementById("ytvideo-results-container").style.display = "none";
+                document.getElementById("ytvideo-counter-container").style.display = "none";
+                initParticles();
+                // ...ne pas lancer init() pour éviter double initialisation...
                 checkMinimalMode();
             }
-            else if (
-                (path === '' || path === '/') &&
-                window.location.hash.startsWith('#/youtube/')
-            ) {
-                window.location.replace(window.location.hash.slice(1));
+            // Ajout : /youtube/video route
+            else if (path.replace(/\/+$/, '') === '/youtube/video') {
+                showYoutube();
+                // Affiche uniquement la recherche vidéo
+                document.querySelectorAll("#main-container .search-card")[0].style.display = "none";
+                document.querySelectorAll("#main-container .search-card")[1].style.display = "block";
+                document.getElementById("results-container").style.display = "none";
+                document.getElementById("counter-container").style.display = "none";
+                document.getElementById("ytvideo-results-container").style.display = "none";
+                document.getElementById("ytvideo-counter-container").style.display = "none";
+                initParticles();
             }
-            else if (
-                (path === '' || path === '/') &&
-                window.location.hash.length > 1
-            ) {
-                window.location.replace('/youtube/' + window.location.hash.substring(1));
+            // ...existing code...
+            else if (path === '' || path === '/') {
+                window.location.replace('/youtube');
             }
             else if (path.replace(/\/+$/, '') === '/twitter') {
                 showTwitter();
@@ -1722,8 +1724,8 @@
                     const newUrl = `/instagram/${instagramId}`;
                     window.history.pushState({}, '', newUrl);
                     showInstagramCounter();
-                    clearInterval(instagramIntervalId);
                     fetchInstagramStats();
+                    clearInterval(instagramIntervalId);
                     instagramIntervalId = setInterval(fetchInstagramStats, 2000);
                 });
                 resultsGrid.appendChild(card);
